--- a/src/Errorka/Errorka.csproj
+++ b/src/Errorka/Errorka.csproj
@@ -37,11 +37,11 @@
         <Version>0.1.0</Version>
         <Authors>Alexey Pepelev</Authors>
         <Product>Errorka</Product>
-<!--        <Description>TODO</Description>-->
-<!--        <Summary>TODO</Summary>-->
+        <Description>Errorka allows to handle errors in safe manner</Description>
+        <Summary>Errorka allows to handle errors in safe manner</Summary>
         <PackageTags>error discriminatedunion</PackageTags>
-<!--        <PackageIcon>logo128x128.png</PackageIcon>-->
-<!--        <PackageIconFullPath>$(MSBuildThisFileDirectory)\..\..\logo128x128.png</PackageIconFullPath>-->
+        <PackageIcon>logo128x128.png</PackageIcon>
+        <PackageIconFullPath>$(MSBuildThisFileDirectory)\..\..\logo128x128.png</PackageIconFullPath>
         <PackageProjectUrl>https://github.com/pepelev/Errorka</PackageProjectUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -53,7 +53,7 @@
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
     </PropertyGroup>
-    
+
     <PropertyGroup Condition="'$(Environment)' == 'ci'">
         <Deterministic>true</Deterministic>
         <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
