--- a/src/Errorka.Tests/Errorka.Tests.csproj
+++ b/src/Errorka.Tests/Errorka.Tests.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
         <PackageReference Include="NUnit" Version="3.13.3" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
         <PackageReference Include="Verify.NUnit" Version="19.7.1" />
         <PackageReference Include="Verify.SourceGenerators" Version="2.0.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2" PrivateAssets="all" />
